# gpsd2waydroid

./: .gitignore  Cargo.toml  README.md  gpsd2waydroid.nix  result  settings_apk-debug.apk
src/: main.rs
