[package]
name = "gpsd2waydroid"
version = "0.1.1"
edition = "2021"

[dependencies]
futures = "0.3"
gpsd_proto = "1.0.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["full"] }
serde_json = "1.0"
log = "0.4"
flexi_logger = "0.22"
subprocess = "0.2.9"
